antlr-basics/src/main/java/com/poc/chapter_07_part03_a/grammar/Calc1Ex.g4
grammar Calc1Ex;
result : expression ;
expression : expression MULT expression       # Mult
           | expression ADD expression        # Add
           | INT                              # Int;


MULT: '*' ;
ADD : '+' ;
INT : [0-9]+ ;
WS : [ \t\n]+ -> skip ;
